--- a/src/components/Products/Products.css
+++ b/src/components/Products/Products.css
@@ -16,3 +16,16 @@
     max-width:min-content;
     height: 400px;
 }
+
+.product_popup_off{
+    display: none;
+    height: 20vh;
+    width: 20vw;
+   }
+
+.product_popup_on{
+ display: show;
+ height: 20vh;
+ width: 20vw;
+}
+
