--- a/src/components/Products/Products.css
+++ b/src/components/Products/Products.css
@@ -1,5 +1,9 @@
+html{
+    background-color:rgba(0, 0, 0, 0.064);
+}
+
 .products_container {
-    display: flex;
+   display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     align-items: center;
@@ -10,11 +14,18 @@
     flex-direction: column;
     flex-wrap: wrap;
     align-items: center;
-    justify-content: center;
+    justify-content: space-evenly;
     border: 2px solid black;
     margin: 10px;
+    padding: 20px;
     max-width:min-content;
     height: 400px;
+    border-radius: 15px;
+    box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
 }
-
-
+.product_card:hover {
+    box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
+}
+.product_card > img {
+    border-radius: 25px;
+}
