--- a/src/components/Products/Products.css
+++ b/src/components/Products/Products.css
@@ -1,5 +1,6 @@
 html{
     background-color:rgba(0, 0, 0, 0.064);
+    font-family: Roboto, sans-serif;
 }
 
 .products_container {
@@ -17,7 +18,6 @@ html{
     grid-template-columns: 3fr;
     align-items: center;
     justify-content: space-evenly;
-    
     margin: 10px;
     padding: 20px;
     max-width:min-content;
@@ -37,6 +37,15 @@ html{
 }
 .product_card > button:hover{
     box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
+}
+.product_title {
+    align-items: center;
+    justify-self: center;
+    font-weight: bold;
+}
+.product_description{
+    color: gray;
+    text-transform: uppercase;
 }
 .image_container > img {
     border-radius: 15px;
