--- a/src/components/ProductPage/ProductPage.css
+++ b/src/components/ProductPage/ProductPage.css
@@ -15,6 +15,7 @@
     border-radius: 25px;
     margin: 30px;
 }
+
 .product_image_container{
     display: flex;
     flex-direction: column;
@@ -32,9 +33,45 @@
     padding: 15px;
     margin-top: 30px;
 }
+.product_details_container>h1{
+    font-size: 2;
+}
+.single_product_description{
+    color: gray;
+    text-transform: uppercase;
+}
+.price_stock_container{
+    display: flex;
+    flex-flow: row wrap;
+    align-items: center;
+    justify-content: flex-start;
+    gap: 10px;
+}
+.prduct_in_stock{
+    color: orange;
+    font-size: x-small;
+}
+.single_product_price {
+    font-size: 1.2rem;
+
+}
 .product_image_container>a{
     font-size:.6rem;
     text-decoration: none;
+}
+.product_details_container>button{
+    border: 1px solid whitesmoke;
+    border-radius: 5px;
+    padding: 10px;
+    text-transform: uppercase;
+    font-weight: bold;
+    background-color:#000000;
+    color: whitesmoke;
+    cursor: pointer;
+}
+.product_details_container>button:hover{
+    color: orange;
+    border-color: orange;
 }
 .x_close {
     width: 30px;
@@ -42,5 +79,4 @@
     position: absolute;
     right: 10px;
     top:10px;
-    
 }
