--- a/src/components/FilterSearch/SearchBar.css
+++ b/src/components/FilterSearch/SearchBar.css
@@ -6,7 +6,7 @@
   margin: 0;
   width: 100%;
   display: flex;
-  background-color: #3E4FB2;
+  background-color: #711A75;
   flex-direction: row;
   justify-content: space-evenly;
   align-items: center;
@@ -18,4 +18,5 @@
   height: 34px;
   width: 15px;
   float:left;
+  gap: 10px;
 }
