--- a/src/components/Products/Products.css
+++ b/src/components/Products/Products.css
@@ -1,16 +1,26 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap');
+
 html{
     background-color:rgba(0, 0, 0, 0.064);
-    font-family: Roboto, sans-serif;
+    font-family: 'Lato', sans-serif;
 }
-
+.hidden {
+    display: none;
+    background-color:black;
+}
+.visible {
+    display:flex;
+}
 .products_container {
-   display: flex;
+    display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
     gap: 2rem;
     padding: 10px ;
+    margin-top: 150px;
 }
 .product_card{ 
     display: grid;
