--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,3 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@100&family=Roboto:wght@100;300;400;700&display=swap');
+ 
+*{
+    font-family: 'Roboto', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue';
+}
+
 .top {
     position: fixed;
     top: 0;
@@ -20,8 +27,8 @@
   
   .item:first-of-type {
     
-    width: 50%;
-    margin-right: 20%;
+    width: 40%;
+    margin-right: 10%;
   }
   
   .item:first-of-type a {
